--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body style= background-color:"lightyellow;">
+<body style=background-color:"lightyellow;">
 <title> KMS
- <h1> style= font-family:"comicsans;">SPicY mEmS </h1>
-  <p> Hi, I like memes. Live, laugh, and meme it up </p>
+ <h1> style=font-family:"comicsans;">SPicY mEmS </h1>
+  <p> Hi, I like doggos. Live, laugh, and meme it up. </p>
 </body>
 </html>
