--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:lightyellow;">
+<body style="background-color:yellow;">
 <title> KMS
  <h1> style="font-family:comicsans;">SPicY mEmS </h1>
   <p> Hi, I like doggos. Live, laugh, and meme it up. </p>
