--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:yellow;">
 <title> KMS
- <h1> style="font-family:comicsans;">SPicY mEmS </h1>
+ <h1> style="font-family:courier;">SPicY mEmS </h1>
   <p> Hi, I like doggos. Live, laugh, and meme it up. </p>
 </body>
 </html>
