--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:yellow;">
-<title> KMS
- <h1> style="font-family:courier;">SPicY mEmS </h1>
-  <p> Hi, I like doggos. Live, laugh, and meme it up. </p>
+<body style="background-color:lightyellow;">
+ <title> KMS </title>
+ <h1> Doggos! </h1>
+ <h2> memesmemesmemesmemes </h2>
 </body>
 </html>
