--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:lightyellow;">
  <title> KMS </title>
- <h1 style="text-align:right;font-family:courier;"> Doggos! </h1>
- <h2> memesmemesmemesmemes </h2>
+ <h1 style="text-align:center;font-family:courier;"> Doggos! </h1>
+ <h2> Memes r gr9 </h2>
 </body>
 </html>
