--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,6 @@
 <body style="background-color:lightyellow;">
  <title> KMS </title>
  <h1 style="text-align:center;font-family:courier;"> Doggos! </h1>
- <h2> Memes r gr9 </h2>
+ <p style="color=lightpink;"> Memes r gr9 </p>
 </body>
 </html>
