--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <body style="background-color:lightyellow;">
  <title> KMS </title>
- <h1 style="text-align:center;font-family:courier;"> Doggos! </h1>
- <p style="color=lightpink;"> Memes r gr9 </p>
+ <h1 style="text-align:center;font-family:courier; color=powderblue;"> Doggos! </h1>
+ <p style="color=lightpink;text-align:center;"> Memes r gr9 </p>
 </body>
 </html>
