--- a/aboutme.html
+++ b/aboutme.html
@@ -4,5 +4,6 @@
  <title> KMS </title>
  <h1 style="text-align:center;font-family:courier; color=powderblue;"> Doggos! </h1>
  <p style="color=lightpink;text-align:center;"> Memes r gr9 </p>
+ <a href="https://en.wikipedia.org/wiki/Meme" </a href>
 </body>
 </html>
