--- a/aboutme.html
+++ b/aboutme.html
@@ -2,8 +2,8 @@
 <html>
 <body style="background-color:lightyellow;">
  <title> KMS </title>
- <h1 style="text-align:center;font-family:courier; color=powderblue;"> Doggos! </h1>
- <p style="color=lightpink;text-align:center;"> title="Pepe is alive"> Memes r gr9 </p>
+ <h1 style="text-align:center;font-family:courier;color:lightblue;"> Doggos! </h1>
+ <p style="color:lightpink;text-align:center;"> title="Pepe is alive"> Memes r gr9 </p>
  <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
 </body>
 </html>
