--- a/aboutme.html
+++ b/aboutme.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:lightyellow;">
+<body style="background-color:cyan;">
  <title> KMS </title>
- <h1 style="text-align:center;font-family:courier;color:cyan; font-size:"> Doggos! </h1>
+ <h1 style="text-align:center;font-family:courier;color:lightyellow; font-size:"> Doggos! </h1>
  <p style="color:lightpink;text-align:center;" title="Pepe is alive"> Memes r gr9 </p>
  <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
- <imgsrc
+ <img src="https://goo.gl/images/CGnfpg" </img src>
 </body>
 </html>
