--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,6 @@
  <h1 style="text-align:center;font-family:courier;color:lightyellow; font-size:"> Doggos! </h1>
  <p style="color:lightpink;text-align:center;" title="Pepe is alive"> Memes r gr9 </p>
  <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
- <img src="giphy.gif" >
+ <img src="corgi.gif" >
 </body>
 </html>
