--- a/aboutme.html
+++ b/aboutme.html
@@ -5,6 +5,7 @@
  <h1 style="text-align:center;font-family:courier;color:lightyellow; font-size:"> Doggos! </h1>
  <p style="color:lightpink;text-align:center;" title="Pepe is alive"> Memes r gr9 </p>
  <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
- <img src="corgi.gif" >
+ <img src="https://s-media-cache-ak0.pinimg.com/736x/ae/67/fc/ae67fccf0f42ef56b3447b5fba2d5ed2--sakura-shiba-inu.jpg;text-align:center;>
+ <img src="corgi.gif">
 </body>
 </html>
