--- a/aboutme.html
+++ b/aboutme.html
@@ -7,6 +7,6 @@
  <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
  <img src="https://s-media-cache-ak0.pinimg.com/736x/ae/67/fc/ae67fccf0f42ef56b3447b5fba2d5ed2--sakura-shiba-inu.jpg" >
  <img src="https://goo.gl/images/zxL47D">
- <img src="https://goo.gl/images/zxL47D" style="text-align:right;">
+ <img src="https://goo.gl/images/zxL47D" style="text-align:right;width:128px;height:128px;">
 </body>
 </html>
