--- a/aboutme.html
+++ b/aboutme.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:cyan;">
- <title> KMS </title>
- <h1 style="text-align:center;font-family:courier;color:lightyellow; font-size:"> Doggos! </h1>
- <p style="color:lightpink;text-align:center;" title="Pepe is alive"> Memes r gr9 </p>
+<body style="background-color:light yellow;">
+ <title> memez </title>
+ <h1 style="text-align:center;font-family:courier;color:powder blue; font-size:"> Roxana! </h1>
+ <p style="color:lightpink;text-align:center;" title="Hi! I'm full of salt and dank memes."> Memes r gr9 </p>
  <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
- <img src="https://s-media-cache-ak0.pinimg.com/736x/ae/67/fc/ae67fccf0f42ef56b3447b5fba2d5ed2--sakura-shiba-inu.jpg" style="width:300px;height:350px;">
- <img src="https://goo.gl/images/zxL47D">
- <img src="https://goo.gl/images/zxL47D" style="text-align:center;width:200px;height:250px;">
+ <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" style="text-align:right;" > FUN </a href>
+ <img src="https://goo.gl/images/CGnfpg" style="width:300px;height:350px;">
+ <img src="https://goo.gl/images/zxL47D" align="middle" style="width:200px;height:250px;">
 </body>
 </html>
