--- a/aboutme.html
+++ b/aboutme.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:light yellow;">
+<body style="background-color:lightyellow;">
  <title> memez </title>
- <h1 style="text-align:center;font-family:courier;color:powder blue; font-size:"> Roxana! </h1>
- <p style="color:lightpink;text-align:center;" title="Hi! I'm full of salt and dank memes."> Memes r gr9 </p>
+ <h1 style="text-align:center;font-family:courier;color:powderblue"> Roxana! </h1>
+ <p style="color:lightpink;text-align:center;" title="memz r gr9"> Hi! I'm full of salt and dank memes. </p>
  <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" style="text-align:right;" > FUN </a href>
  <img src="https://goo.gl/images/CGnfpg" style="width:300px;height:350px;">
