--- a/aboutme.html
+++ b/aboutme.html
@@ -2,11 +2,10 @@
 <html>
 <body style="background-color:lightyellow;">
  <title> memez </title>
- <h1 style="text-align:center;font-family:courier;color:powderblue"> Roxana! </h1>
- <p style="color:lightpink;text-align:center;" title="memz r gr9"> Hi! I'm full of salt and dank memes. </p>
+ <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
+ <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p>
   <img src="https://goo.gl/images/CGnfpg" style="width:300px;height:350px;">
-  <img src="https://goo.gl/images/zxL47D" align="middle" style="width:200px;height:250px;">
- <h2
+  <img src="https://goo.gl/images/zxL47D" align="middle" style="width:200px;height:250px;"> <br>
   <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
   <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" style="text-align:right;" > FUN </a href>
 </body>
