--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p>
   <img src="DOG.gif" alt="OOP" style="width:300px;height:350px;">
   <img src="DOG.gif" align="middle" style="width:200px;height:250px;"> <br>
- <p> <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
-  <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" style="text-align:right;" > FUN </a href> </p>
+ <p> <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href> </p>
+ <p> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" style="text-align:right;" > FUN </a href> </p>
 </body>
 </html>
