--- a/aboutme.html
+++ b/aboutme.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<body style="background-color:lightyellow;">
+<body style="background-color:slategray;">
  <title> memez </title>
  <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p>
