--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <base target="_parent">
-<body style="background-color:lightorange;">
+<body style="background-color:rbg(19, 1, 109);">
  <title> memez </title>
  <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p>
