--- a/aboutme.html
+++ b/aboutme.html
@@ -5,9 +5,10 @@
 <body style="background-color:rbg(19, 1, 109);">
  <title> memez </title>
  <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
- <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p>
-  <img src="DOG.gif" alt="OOP" align="middle" style="width:300px;height:350px;"> 
-  <img src="DOG.gif" style="width:200px;height:250px;"> <br>
+ <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p> <br>
+ <p> <img src="DOG.gif" alt="OOP" style="width:100px;height:150px;"> </p> <br>
+ <p> <img src="DOG.gif" style="width:100px;height:150px;"> </p> <br>
+  <p> <img src="DOG.gif" > </p>
  <p> <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
  <img src="https://s-media-cache-ak0.pinimg.com/736x/ae/67/fc/ae67fccf0f42ef56b3447b5fba2d5ed2--sakura-shiba-inu.jpg" style="width:300px;height:350px;> </p>
  <p> <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" > FUN </a href> </p>
