--- a/aboutme.html
+++ b/aboutme.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    
   <base target="_parent">
-<body style="background-color:black;">
+<body style="background-color:rainbowswirl.jpeg;">
  <title> memez </title>
  <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p> <br>
@@ -11,7 +13,6 @@
  <p> <img src="DOG.gif" style="width:100px;height:150px;"> </p> <br>
  <p> <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" > FUN </a href> </p>
-    </base target="_parent">                                                                                              
-</head>                                                                                              
+    </base target="_parent">                                                                                                                                                                                           
 </body>
 </html>
