--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,8 @@
 <html>
 <head>
   <style>
-    
+   </stle>
+</head>
   <base target="_parent">
 <body style="background-color:rainbowswirl.jpeg;">
  <title> memez </title>
