--- a/aboutme.html
+++ b/aboutme.html
@@ -5,7 +5,7 @@
    </stle>
 </head>
   <base target="_parent">
-<body style="background-color:rainbowswirl.jpeg;">
+<body style="background-color:lightyellow;">
  <title> memez </title>
  <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p> <br>
