--- a/aboutme.html
+++ b/aboutme.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <style>
-   </stle>
+   </style>
 </head>
   <base target="_parent">
 <body style="background-color:lightyellow;">
