--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,16 @@
 </head>
   <base target="_parent">
 <body style="background-color:lightyellow;">
- <title> memez </title>
+  <div id="templateInfo'>
+<title>Gay Boi</title>
+<div id="page">
+  <div id="header">
+    <div>
+      <img src="santa_sky.htm">
+      <h1>Roxana!</h1>
+      <h2></h2>
+                              
+<a href
  <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p> <br>
  <p> <img src="DOG.gif" alt="OOP" style="width:100px;height:150px;">
