--- a/aboutme.html
+++ b/aboutme.html
@@ -5,20 +5,19 @@
    </style>
 </head>
   <base target="_parent">
-<body style="background-color:lightyellow;">
+<body style="background-color:santa_sky.htm;">
   <div id="templateInfo'>
 <title>Gay Boi</title>
 <div id="page">
   <div id="header">
     <div>
-      <img src="santa_sky.htm">
-      <h1>Roxana!</h1>
-      <h2></h2>
-                              
-<a href
- <h1 style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1>
+      <h1>Roxana!</h1>                     
+      <span id="yt-masthead-logo-fragment">
+        <a href="/" class="masthead-logo-renderer yt-uix-     sessionlink      spf-link " data-sessionlink=   "itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="YouTube Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span> </a></span>
+ <h1<span id="yt-masthead-logo-fragment"><a href="/" class="masthead-logo-renderer yt-uix-sessionlink      spf-link " data-sessionlink="itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="YouTube Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span>
+</a></span> style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1> </div>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p> <br>
- <p> <img src="DOG.gif" alt="OOP" style="width:100px;height:150px;">
+ <p> <img src="DOG.gif" alt="OOP" style="width:100px;height:150px;"> </p>
    <img src="https://s-media-cache-ak0.pinimg.com/736x/ae/67/fc/ae67fccf0f42ef56b3447b5fba2d5ed2--sakura-shiba-inu.jpg"> style="width:300px;height:350px;> </p></p> <br>
  <p> <img src="DOG.gif" style="width:100px;height:150px;"> </p> <br>
  <p> <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
@@ -26,3 +25,5 @@
     </base target="_parent">                                                                                                                                                                                           
 </body>
 </html>
+<span id="yt-masthead-logo-fragment"><a href="/" class="masthead-logo-renderer yt-uix-sessionlink      spf-link " data-sessionlink="itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="YouTube Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span>
+</a></span>
