--- a/aboutme.html
+++ b/aboutme.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
-<!-- Website template by freewebsitetemplates.com -->
 <head>
 	<base href="https://f271.https.cdn.softlayer.net/80F271/dal05.objectstorage.softlayer.net/v1/AUTH_b4a3a2ca-226e-4f3c-aef2-b5275f5900cc/cdn/preview/space-science/">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Space Science Website Template</title>
+	<title>QUEER BOI</title>
 	
 	<link rel="stylesheet" href="css/style.css" type="text/css">
 	<link rel="stylesheet" type="text/css" href="css/mobile.css">
