--- a/aboutme.html
+++ b/aboutme.html
@@ -5,12 +5,12 @@
    </style>
 </head>
   <base target="_parent">
-<body style="background-color:santa_sky.htm;">
+<body style="background-color:lightyellow;">
   <div id="templateInfo'>
-<title>Gay Boi</title>
+<title>QUEER BOI</title>
 <div id="page">
   <div id="header">
-    <div>
+    <div style="text-align:center;">
       <h1>Roxana!</h1>                     
       <span id="yt-masthead-logo-fragment">
         <a href="/" class="masthead-logo-renderer yt-uix-     sessionlink      spf-link " data-sessionlink=   "itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="YouTube Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span> </a></span> <h1<span id="yt-masthead-logo-fragment"></a>
