--- a/aboutme.html
+++ b/aboutme.html
@@ -13,15 +13,18 @@
     <div style="text-align:center;">
       <h1>Roxana!</h1>                     
       <span id="yt-masthead-logo-fragment">
-        <a href="/" class="masthead-logo-renderer yt-uix-     sessionlink      spf-link " data-sessionlink=   "itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="YouTube Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span> </a></span> <h1<span id="yt-masthead-logo-fragment"></a>
-        </span> style="text-align:center;font-family:courier;color:powderblue"> <b> <i> Roxana! </b> </i> </h1> </div>
+        <a href="/" class="masthead-logo-renderer yt-uix-     sessionlink      spf-link " data-sessionlink=   "itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="Roxana! Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span> </a></span> <h1<span id="yt-masthead-logo-fragment"></a>
+        </span> style="text-align:center;font-family:courier;color:powderblue"> <b> </h1> </div>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I'm full of salt and dank memes. </i> </p> <br>
  <p> <img src="DOG.gif" alt="OOP" style="width:100px;height:150px;"> </p>
    <img src="https://s-media-cache-ak0.pinimg.com/736x/ae/67/fc/ae67fccf0f42ef56b3447b5fba2d5ed2--sakura-shiba-inu.jpg"> style="width:300px;height:350px;> </p></p> <br>
- <p> <img src="DOG.gif" style="width:100px;height:150px;"> </p> <br>
+ <p> <img src="DOG.gif"> </p> <br>
+<div style="text-align:center;">
  <p> <a href="https://en.wikipedia.org/wiki/Meme"> DANK </a href>
+<div>
 <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&list=PLSM9Rzy5Qpq2YxoLqV0LxW-h3igLGFNx9" > FUN </a href> </p>
-    </base target="_parent">                                                                                                                                                                                           
+    </base target="_parent"> 
+</div>
 </body>
 </html>
 <span id="yt-masthead-logo-fragment"><a href="/" class="masthead-logo-renderer yt-uix-sessionlink      spf-link " data-sessionlink="itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="YouTube Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span>
