--- a/aboutme.html
+++ b/aboutme.html
@@ -11,10 +11,7 @@
 <div id="page">
   <div id="header">
     <div style="text-align:center;">
-      <h1>Roxana!</h1>                     
-      <span id="yt-masthead-logo-fragment">
-        <a href="/" class="masthead-logo-renderer yt-uix-     sessionlink      spf-link " data-sessionlink=   "itct=CAUQsV4iEwiiyvSH0ZrVAhWJ1JwKHWerBDUojh4" id="logo-container" title="Roxana! Home">  <span class="logo masthead-logo-renderer-logo yt-sprite" title="YouTube Home"></span> </a></span> <h1<span id="yt-masthead-logo-fragment"></a>
-        </span> style="text-align:center;font-family:courier;color:powderblue"> <b> </h1> </div>
+      <h1 "Roxana!" style="text-align:center;font-family:courier;color:powderblue"> <b> </h1> </div>
  <p style="color:lightpink;text-align:center;" title="memz r gr9"> <i> Hi! I literally hate everything except dogs and Voltron. </i> </p> <br>
  <p> <img src="DOG.gif" alt="OOP"> </p>
    <img src="https://s-media-cache-ak0.pinimg.com/736x/ae/67/fc/ae67fccf0f42ef56b3447b5fba2d5ed2--sakura-shiba-inu.jpg"> </p> <br>
