--- a/aboutme.html
+++ b/aboutme.html
@@ -7,12 +7,12 @@
   <base target="_parent">
 <body style="background-color:lightyellow;">
 <title>QUEER BOI</title>
-	  <div class="title">Nina's Webpage</div>
+	<div class="title">Roxana!</div>
       
-    <div class="slideshow">
-        <img class="slides" src="santag.jpg">
-        <img class="slides" src="russo.jpg">        
-        <img class="slides" src="voltron.png">
+    	<div class="slideshow">
+        	<img class="slides" src="santag.jpg">
+        	<img class="slides" src="russo.jpg">        
+        	<img class="slides" src="santab.jpg">
 			
 	</div>
 
